// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be invalid for all 1`] = `
Object {
  "code": "yup:varchar.nonEmpty",
  "flowUnit": "yup:varchar.nonEmpty",
  "id": "yup:string.uuid",
  "levelUnit": "yup:varchar.nonEmpty",
  "location": Object {
    "coordinates": Array [
      "yup:number.longitude",
      "yup:number.latitude",
    ],
    "id": "yup:string.uuid",
    "kind": Object {
      "key": "yup:mixed.oneOf",
      "options": Object {
        "values": "put-in, put-in-alt, put-in-road, take-out, take-out-alt, take-out-road, waterfall, rapid, portage, playspot, hazard, river-campsite, wild-camping, paid-camping, gauge, hike-waypoint, bridge, dam, power-plant, kayak-shop, other",
      },
    },
  },
  "name": "yup:string.nonEmpty",
  "source": Object {
    "id": "yup:string.uuid",
  },
  "url": Object {
    "key": "yup:string.url",
    "options": Object {
      "path": "url",
    },
  },
}
`;

exports[`should be invalid for extra field 1`] = `
Object {
  "undefined": Object {
    "key": "yup:object.noUnknown",
    "options": Object {
      "path": "this",
    },
  },
}
`;

exports[`should be invalid for null source 1`] = `
Object {
  "source": Object {
    "key": "yup:mixed.notType",
    "options": Object {
      "type": "object",
    },
  },
}
`;

exports[`should be invalid for undefined code 1`] = `
Object {
  "code": "yup:varchar.nonEmpty",
}
`;

exports[`should be invalid for undefined level unit 1`] = `
Object {
  "levelUnit": "yup:mixed.defined",
}
`;

exports[`should be invalid for undefined name 1`] = `
Object {
  "name": "yup:string.nonEmpty",
}
`;

exports[`should be invalid for undefined request params 1`] = `
Object {
  "requestParams": "yup:mixed.defined",
}
`;

exports[`should be invalid for undefined source 1`] = `
Object {
  "source": "yup:mixed.defined",
}
`;
